--- a/papers/Cr/Cr.tex
+++ b/papers/Cr/Cr.tex
@@ -22,7 +22,7 @@ In order to model this coupling between the order parameters throughout the mate
 	F = \frac{\alpha}{2}(T_L-T_c) L^2 + \frac{\beta}{4} L^4 - g L^2 y + \frac{\omega_0}{2} y^2 + \frac{b}{4} y^4.
 \end{equation}
 
-The double well potential that leads to the SDW is characterised by $\alpha$ and $\beta$, with the temperature of the SDW is given by $T_L$, with the critical temperature $T_c$, above which the phase transition occurs and the order gets destroyed. The coupling between the two order parameters is given by term with $\gamma$, where $L$ is to second power because energy is time-reversal even whereas $L$ is time-reversal odd. Notice that the PLD order parameter $y$ by itself would not have a nonzero equilibrium value, the fourth order term with $b$ is only to provide a better fitting to some anistropic features of the experiment that we are looking to describe. The equilibrium value of $y$ will however be shifted away from 0 due to the force applied to it by the nonzero $L$, a key feature of this model to bear in mind for later. $y$ is thus a pure slave order parameter.
+The double well potential that leads to the SDW is characterised by $\alpha$ and $\beta$, with the temperature of the SDW is given by $T_L$, with the critical temperature $T_c$, above which the phase transition occurs and the order gets destroyed. The coupling between the two order parameters is given by term with $\gamma$, where $L$ is to second power because energy is time-reversal even whereas $L$ is time-reversal odd. Notice that the PLD order parameter $y$ by itself would not have a nonzero equilibrium value, the fourth order term with $b$ is only to provide a better fitting to some anistropic features of the experiment that we are looking to describe, not to bound the energy as is required if $y$ would also undergo a second order phase transition as $L$. The equilibrium value of $y$ will however be shifted away from zero due to the force applied to it by the nonzero $L$, a key feature of this model to bear in mind for later. $y$ is thus a pure slave order parameter.
 
 In order to describe the heating of the SDW through the photoexcitation caused by the XFEL pulses, we use a two temperature model given by
 \begin{align}
@@ -48,7 +48,7 @@ XFELs also allow for higher peak selectivity (narrow and intense satellite Bragg
 To this end, a 30nm thick Cr film was used in the experiments, harboring seven periods of the SDW perpendicular to the plane. This thinness of the film also decreases the Neel temperature to 290K, from the bulk value of around 307K. The pulses used to excite the SDW were 40 fs long, with a total intensity of 2.9 $mJ/cm^2$. In the experiments with two sequential pulses the power of the second pulse was roughly half that of the first.
 
 \section{Results}
-The experimental results we use as a basis to fit our model to are shown in Fig.~\ref{fig:Cr_experimental}. In the numerical model, we found in earlier trials that the dynamics of the SDW order parameter $L$ is orders of magnitude faster than the ones from the PLD $y$, as expected. Therefore, to limit the difficulties of solving the differential equations for the time evolution, we assumed that at each timestep the $L$ order parameter is in equilibrium with it's instantaneous energy potential. This is equivalent to the limit of the mass $m_L$ in Eq.~\ref{eq:L_diffeq} going to zero. We then took 14 representative experiments, which can be thought of as horizontal slices from Fig.~\ref{fig:Cr_experimental}(a), solved the differential equations for each of them, and fitted the model parameters to achieve the best total fit.       
+The experimental results we use as a basis to fit our model to are shown in Fig.~\ref{fig:Cr_experimental}. In the numerical model, we found in earlier trials that the dynamics of the SDW order parameter $L$ is orders of magnitude faster than the ones from the PLD $y$, as expected. This can also be seen from Fig.~\ref{fig:Cr_energy_surfaces} since the energy potential is a lot flatter for $y$ than for $L$, leading to a slower time evolution. Therefore, to limit the difficulties of solving the differential equations for the time evolution, we assumed that at each timestep the $L$ order parameter is in equilibrium with it's instantaneous energy potential minimum. This is equivalent to the limit of the mass $m_L$ in Eq.~\ref{eq:L_diffeq} going to zero. We then took 11 representative experiments, which can be thought of as horizontal slices of Fig.~\ref{fig:Cr_experimental}(a), solved the differential equations for each of them, and fitted the model parameters to achieve the best total (composite) fit.       
 
 \begin{figure}
 \IncludeGraphics{Experimental}
@@ -60,11 +60,18 @@ The results of this fitting procedure is shown in Fig.~\ref{fig:Cr_theoretical_f
 \IncludeGraphics{Theory_Fit}
 \caption{\label{fig:Cr_theoretical_fit} Comparison of theoretical fit vs Experiment. (a-b) Two examples of fits to constructive (a) and destructive (b) experiments. (c-d) Comparison of the theoretically generated heatmap (c) with the experimental heatmap (d).}
 \end{figure}
-To get a deeper understanding of the underlying effect, we can look at the evolution of the free energy surfaces for both order parameters, as shown in Fig.~\ref{fig:Cr_energy_surfaces}. The characteristic double well potential for $L\neq0$ equilibrium is clearly visible, and as expected, when the pulses hit and $T_L$ increases in the term $\alpha(T_L-T_c)L^2$ of Eq.~\ref{eq:landau}, we see that the potential flattens causing the the minimum of $L$ to very quickly change, as discussed above. This in turn causes the single-well potential of $y$ to shift as quickly. The dynamics of $y$ is orders of magnitude slower than that of $L$ and due to this instant shift of the energy surface, it will cause an oscillation of $y$. While the temperature $T_L$ decreases again, $L$ and the minimum of the $y$ potential shift back towards the original equilibrium position. The oscillation of $y$ remains for a relatively long time while this shift is occurring since the damping is not that big (of the order of 4ps). It then becomes clear that if the second pulse can repeat this mechanism while the oscillation of $y$ is still there, it can be increased or decreased depending on the timing. Having this understanding, it becomes clear what the most efficient way is to excite this PLD oscillation. First of all, when the system is relatively close to the phase transition of $L$, a small increase of temperature causes a large change in the value of $L$ and thus in the shift of the potential for $y$. On the other hand increasing the temperature of the system above the PT leads to no additional "momentum" being given to $y$ and is thus a waste. Secondly, if the goal is to excite $y$ to the maximum value, the time for damping needs to be as limited as possible. This leads to the case that to gain maximum oscillation magnitude, exciting once every period of $y$ with as much energy to never heat above the PT. This last consideration also depends on the cooling rate of the SDW. 
+To get a deeper understanding of the underlying effect, we can look at the evolution of the free energy surfaces for both order parameters, as shown in Fig.~\ref{fig:Cr_energy_surfaces}. The characteristic double well potential for $L\neq0$ equilibrium is clearly visible, and as expected, when the pulses hit and $T_L$ increases in the term $\alpha(T_L-T_c)L^2$ of Eq.~\ref{eq:landau}, we see that the potential flattens causing the the minimum of $L$ to very quickly change, as discussed above. This in turn causes the single-well potential of $y$ to shift as quickly. The dynamics of $y$ is orders of magnitude slower than that of $L$ and due to this instant shift of the energy surface, it will cause an oscillation of $y$. While the temperature $T_L$ decreases again, $L$ and the minimum of the $y$ potential shift back towards the original equilibrium position. The oscillation of $y$ remains for a relatively long time while this shift is occurring since the damping is not that big (of the order of 4ps). It then becomes clear that if the second pulse can repeat this mechanism while the oscillation of $y$ is still there, it can be increased or decreased depending on the timing. Having this understanding, let's investigate what the ideal way to excite $y$ is. 
+
+First of all, when the system is relatively close to the phase transition of $L$, a small increase of temperature causes a large change in the value of $L$ and thus in the shift of the potential for $y$. It is then important to keep this initial shift of the potential for $y$ in place until $y$ crosses the minimum, converting as much potential energy into "kinetic" energy. This requires $L$ to be heated slightly above the PT, which leads to the largest possible shift of the potential of $y$, and the additional temperature of $L$ above $T_c$, together with the cooling rate, allows $y$ to gain the maximum kinetic energy. As soon as $y$ is beyond this point, the temperate of $L$ should decrease to below $T_c$ as much as possible to repeat this process after $y$ has completed one full period, since that will limit the effect of damping. After repeating this process a couple of times, the increase in kinetic energy of $y$ will also increase the energy lost to damping, which will ultimately limit what the maximum oscillation amplitude. 
 
 \begin{figure}
-\IncludeGraphics{Energy_Surfaces}
-\caption{\label{fig:Cr_theoretical_fit} Comparison of theoretical fit vs Experiment. (a-b) Two examples of fits to constructive (a) and destructive (b) experiments. (c-d) Comparison of the theoretically generated heatmap (c) with the experimental heatmap (d).}
+	\begin{subfigure}{0.5\textwidth}
+		\IncludeGraphics{energy_surface_L.pdf}
+	\end{subfigure}
+	\begin{subfigure}{0.5\textwidth}
+		\IncludeGraphics{energy_surface_y.pdf}
+	\end{subfigure}
+	\caption{\label{fig:Cr_energy_surfaces} Time evolution of the energy surfaces of the order parameters.}
 \end{figure}
 
 Having fit the model, we can go one step further and try to fit the PLD oscillation to an arbitrary signal shape. To this end we use the fitted model, and predict the timing of a fixed fluence pulse train that will result in the required shape. The results are shown in Fig.~\ref{fig:Cr_control}. This showcases that with an arbitrary pulse train we can achieve indirect, but optimal control of the PLD order parameter.
