--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -7,7 +7,8 @@
 \usepackage{siunitx}
 \usepackage{graphicx}
 % \usepackage{smartdiagram}
-\usepackage[caption=false]{subfig}
+\usepackage{subcaption}
+% \usepackage[caption=false]{subfig}
 \captionsetup[subfigure]{labelformat=brace}
 \usepackage[normalem]{ulem}
 \usepackage{tikz}
@@ -16,6 +17,7 @@
 \usepackage{hyperref}
 \addbibresource{/home/ponet/Documents/PhD/Thesis/papers/GdMn2O5/bib.bib}
 \addbibresource{/home/ponet/Documents/PhD/Thesis/papers/Rashba/bib.bib}
+\addbibresource{/home/ponet/Documents/PhD/Thesis/papers/Softening/bib.bib}
 
 %to be used in main text
 \newcommand{\ket}[1]{$\left|#1\right\rangle$}
@@ -66,7 +68,7 @@
 \Include{Rashba}
 \Include{Cr}
 \Include{GdMn2O5}
-
+\Include{Softening}
 % \chapter{Strong coupling and ultrafast control of charge and spin density waves in elemental Chromium}
 % \subfile{chapters/chromium_sdw_cdw.tex}
 \end{document}
