--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -2,24 +2,26 @@
 \section{Introduction}
 % Bulk ferroelectrics with large atomic spin-orbit coupling allow for electric control of spin-polarized states~\cite{DiSante2013,Ishizaka2011,Kim2014, Liebmann2016, Krempasky2015SurfaceSemiconductor}, allowing for the switching of the spin texture by an externally applied electric field. 
 % The underlying mechanism is, however, not well understood.
-The research area of spintronics aims to supersede electronics by using spins instead of charges for information processing and storage. %\sa{https://doi.org/10.1146/annurev-conmatphys-070909-104123} 
-Many possible devices that utilize both charge and spin degrees of freedom of carriers have been theorized. Examples are the spin field-effect transistors (spin-FET)\cite{Datta1990}, storage devices which utilize spin-current and associated spin-transfer torque to efficiently manipulate magnetic domains \cite{Kent2015,Jungwirth2016}. In spite of fundamental interest and potential for applications, the actual realization of these devices has been rather elusive. One of the main culprits for the limited success to date is that the devices require very granular, ideally electric, control of the spin, which is impeded by widely separated energy scales and weak coupling between magnetic and structural degrees of freedom. One class of materials that allow for such electric control of spin-polarized states are the ferroelectric semiconductors with large atomic spin-orbit coupling (SOC) \cite{DiSante2013,Ishizaka2011,Kim2014}. The underlying mechanism is a coupling between the spin-polarized states and the ferroelectric polarization of the material that makes it possible to switch the ferroelectric polarization and in turn the polarization of the spin by the external electric field. The effect has been confirmed both experimentally \cite{Ishizaka2011,Liebmann2016,Krempasky2015SurfaceSemiconductor}, and through ab initio density functional theory (DFT) simulations \cite{DiSante2013}. 
+The research area of spintronics aims to supersede standard electronics by using both the spin as charge degree of freedom of carriers for information processing and storage. %\sa{https://doi.org/10.1146/annurev-conmatphys-070909-104123} 
+Many possible devices have been theorized, examples are the spin field-effect transistors (spin-FET)\cite{Datta1990} and storage devices which utilize spin-current and associated spin-transfer torque to efficiently manipulate magnetic domains \cite{Kent2015,Jungwirth2016}. In spite of fundamental interest and potential for applications, the actual realization of these devices has been rather elusive.
+One of the main culprits for the limited success to date is that the devices require very granular, ideally electric, control of the spin, which is impeded by widely separated energy scales and weak coupling between magnetic and structural degrees of freedom.
+One class of materials that allow for such electric control of spin-polarized states are the ferroelectric semiconductors with large atomic spin-orbit coupling (SOC) \cite{DiSante2013,Ishizaka2011,Kim2014}.
+The inversion symmetry breaking together with the SOC results in a clear splitting between spin-polarized states in certain parts of the Brillouin Zone. If current carriers travel through one of these spin-polarized states, their spin will align with it. As will be discussed in more detail below, the direction of the spin polarization depends on the orientation of the ferroelectric polarization $P$, allowing it to be tuned by an external electric field. These spin-polarized states have been observed both experimentally \cite{Ishizaka2011,Liebmann2016,Krempasky2015SurfaceSemiconductor}, and from ab initio density functional theory (DFT) simulations \cite{DiSante2013}. It is, however, often not well understood and often misattributed what the underlying microscopic effects are that lead to the splitting.
+\lp{explicit mentions? Maybe too aggressive}
+
+In this part of the thesis we will investigate the different origins of this $k$ and $P$ dependent spin-splitting. The contributions that will be scrutinized have the form $\mathbf{P} \cdot (\mathbf{k} \times \mathbf{\sigma})$, where $\mathbf{\sigma}$ denotes the spin of the electron. As it will turn out, multiple microscopic effects lead to contributions of this form, some of these are well known, others are a little more obscure. We hope that this will shed light on where these contributions come from and how they compare with eachother and how they ultimately lead to the observed spin-splitting.
 
 \section{Rashba-Bychkov Effect}
 %############################ NEW ############################
-The first effect that springs to mind bearing the signatures of the above description is the Rashba effect, first theorised in the seminal 1959 paper by Rashba and Bychkov \cite{Rashba1959SymmetryAr}. This effect is a text book case where the breaking of a symmetry, in this case inversion symmetry, leads to previously degenerate states becoming nondegenerate with a definite value of the parameter describing the symmetry. In the case of the Rashba-effect, the absence of inversion symmetry leads to a breaking of the up-down symmetry of the spin of bloch functions, leading to states with definite spin polarization. These could then in turn theoretically be used in spintronics applications.
-We will first describe how the effect was first derived and then discuss the issues with explaining the observed spin-splitting of bloch wavefunctions in bulk ferroelectrics, and give a hint why the largest spin-polarizing effect might actually be coming from a completely different origin. 
-
-The standard derivation starts from an expansion of the electron part of the fully relativistic Dirac-equation up to second order in $1/c$ where $c$ is the speed of light \cite{Rashba1959SymmetryAr}, in the absense of an external magnetic field:
+The first discovered and most well known effect bearing the correct form is the Rashba-Bychkov effect, first derived in their seminal 1959 paper\cite{Rashba1959SymmetryAr}. It is a purely relativistic effect that finds its origin in an expansion to second order in $1/c$, $c$ denoting the speed of light, of the electronic Dirac equation (where the Fouldy-Wouthuysen transformation was applied to integrate out the positrons):
 
 \begin{equation}
 	\mathcal{H} \psi = \left[\frac{\bm{p}^2}{2m} - e V - \frac{e \hbar}{4m^2c^2}(\bm{\sigma}\cdot[\bm{\nabla}V \times \bm{p}]) - \frac{\hbar^2}{8m^2c^2} \Delta V - \frac{\bm{p}^4}{8m^3c^2}\right]\psi = E\psi
 \end{equation}
 
-where $\psi$ is a two component spinor, V denotes the electric potential, $\bm{\sigma}$ a vector of Pauli-matrices $(\sigma_x, \sigma_y, \sigma_z)$, $m$ and $e$ the electron mass and charge respectively, and $\bm{p}$ the canonical momentum. The first two terms are the nonrelativistic part of the Hamiltonian, the third represents the spin-orbit coupling (SOC), the fourth is known as the Darwin effect and the fifth is the relativistic correction to the effective electron mass. For the further discussion, we focus on the first three terms.
+where $\psi$ is a two component spinor, $V$ denotes the electric potential, $\bm{\sigma}$ a vector of Pauli-matrices $(\sigma_x, \sigma_y, \sigma_z)$, $m$ and $e$ the electron mass and charge respectively, and $\bm{p}$ the canonical momentum. The first two terms are the nonrelativistic part of the Hamiltonian, the third represents the SOC, the fourth is known as the Darwin effect and the fifth is the relativistic correction to the effective electron mass. 
 
-
-The next step is to apply the Hamiltonian to Bloch spinor wavefunctions $\psi_n(\bm{k}, \bm{r}) = u_n(\bm{k}, \bm{r})e^{i\bm{k}\cdot\bm{r}}$, where $u_n$ denotes the cell-periodic part, and $n$ is the band index. This leads to an eigenvalue equation for $u_n(\bm{k}, \bm{r})$
+The first three terms can be applied to Bloch spinor wavefunctions $\psi_n(\bm{k}, \bm{r}) = u_n(\bm{k}, \bm{r})e^{i\bm{k}\cdot\bm{r}}$, where $u_n$ denotes the cell-periodic part, and $n$ is the band index. This leads to an eigenvalue equation for $u_n(\bm{k}, \bm{r})$
 \begin{align}
 	E_n u_n(\bm{k}, \bm{r}) =& \left(V_0 + V_1  +  V_2 + V_3 \right) u_n(\bm{k}, \bm{r}) \\
 	V_0 =& \frac{p^2}{2m} - eV + \frac{\hbar^2 k^2}{2m} \\
@@ -28,18 +30,24 @@ The next step is to apply the Hamiltonian to Bloch spinor wavefunctions $\psi_n(
 	V_3 =& -\frac{e \hbar}{4m^2c^2} \bm{\sigma} \cdot ( \bm{\nabla}V \times \bm{p})
 \end{align}
 
-In the following we assume that this equation can be solved for a time reversal symmetric point $\bm{k}_0$ in the first BZ, where the spin-up and spin-down part of the spinor are necessarily degenerate, and proceed following standard $\bm{k}\cdot\bm{p}$ theory to perform an expansion around this k-point. Since including the relativistic terms and nonzero $\bm{k}$ will lead to spin up-down symmetry breaking, we will denote the down spin state as $\Ket{u_n^\downarrow}$ and up spin state as $\Ket{u_n^\uparrow}$ at $\bm{k} = \bm{k}_0$. We only investigate terms in the expansion that are linear in $\bm{k}$, since that's the part of the energy dispersion that we are seeking to explain. We again keep terms up to second order in $(1/c)^{-1}$.
-Without loss of generality we can take $\bm{k}_0 = 0$ and $E_0 = 0$.
+In the following it is assumed that this equation can be solved for a time reversal symmetric point $\bm{k}_0$ in the first BZ, where the two spin states areare necessarily degenerate. Due to the broken inversion symmetry and inclusion of the SOC terms ($V_2$,$V_3$), this degeneracy will be broken for nonzero $k$, away from the time-reversal invariant point.
+We denote the two degenerate states at $\bm{k}_0$ by $\Ket{u_n^\downarrow}$ and $\Ket{u_n^\uparrow}$, where $n$ denotes a particular band. It is important to realize that the quantization axis of the spin can change depending on the direction of $\bm{k}$, as will become clear later.
+Without loss of generality we can take $\bm{k}_0 = \bm{0}$ and $E^{\uparrow,\downarrow}_n(\bm{0}) = 0$.
+Expanding in the usual $\bm{k}\cdot\bm{p}$ sense, keeping only linear $\bm{k}$ terms and terms up to second order in $1\c$, we get
 
 \begin{align}
 	\label{eq:kp_expansion}
 	E_n^{\sigma_1}(\bm{k}) =& - \Bra{u_n^{\sigma_1}} V_2 \Ket{u_n^{\sigma_1}} + \\
-		& \sum_{m,\sigma_2=\uparrow,\downarrow}\frac{\Bra{u_n^{\sigma_1}} V_1 \Ket{u_m^{\sigma_2}}\Bra{u_m^{\sigma_2}} V_3 \Ket{u_n^{\sigma_1}} + h.c.}{E_n^{\sigma_2} - E_m^{\sigma_1}},
+		& \sum_{m,\sigma_2=\uparrow,\downarrow}\frac{\Bra{u_n^{\sigma_1}} V_1 \Ket{u_m^{\sigma_2}}\Bra{u_m^{\sigma_2}} V_3 \Ket{u_n^{\sigma_1}} + h.c.}{E_n^{\sigma_1} - E_m^{\sigma_2}},
 \end{align}
 
 where the sum over $m, \sigma_2$ includes all states which are not equal to $n, \sigma_1$. 
 
+
+
 These two terms are of similar order of magnitude in small parameters $c^{-2}$ and $\bm{k}$, but have different behavior with respect to the symmetries of the states, and different origins with respect to the ferroelectricity. The first term can be seen as a direct result of the electric field resulting from the ferroelecticity, i.e. $\nabla V$ there should be understood as the uniform internal electric field, whereas in the second term the $\nabla V$ should be understood as the potential which causes atomic spin-orbit coupling. This means that it is important that the orbitals $u_n$, and $u_m$ in the second term originate from an atom with strong spin-orbit coupling. The reason why this term only leads to a non-zero contribution when inversion is broken can be understood by looking at the required symmetries of orbitals $u_n, u_m$, as was shown by [Blugel paper]. Since $\bm{p}$ is odd in spatial coordinates, $\bm{k} \cdot \bm{p}$ is only non-zero when one of the orbitals is odd with respect to a spatial direction and the other even. One example could be a $p_y$ orbital and a $s$-$pz$ hybdridized one, which would be created by the ferroelectricity with electric polarization along the $z$-axis (add drawing? add hopping matrix?).
+
+
 
 With regards to the size of the effect, the first term usually results in a tiny splitting, due to the tiny prefactor ($~10^{-6}$) and small $\bm{k}$ value. The second term can be larger, because atomic SOC can be large for heavier atoms. There is, however, another possible source of spin splitting, originating from the so-called orbital Rashba effect (ORE).
 
