--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -65,25 +65,22 @@ For this to be true, however, it is important that the orbitals $u_n$, and $u_m$
 \end{figure}
 
 \section{Orbital Rashba Effect}
-Contrary to the relativistic effect, this one originates from electrostatic considerations. Namely, it can be shown that Bloch functions with nonzero orbital angular momentum have nonzero dipoles. This leads to two seperate effects, firstly, when spin orbit coupling is included, OAM is unquenched at the high symmetry k-points, and as will be shown below, this leads to a correction to the band dispersion that varies linearly with $\bm{k}$. Secondly, this causes a linear variation of the OAM of the Bloch functions as one moves away from the high-symmetry point. If one then includes $\bm{l}\cdot\bm{\sigma}$ this linear $l$ will lead to an energy contribution with either positive or negative slope.
-To understand this contribution, we first need to understand the behavior of the orbital angular momentum of the Bloch functions in reciprocal space. This has been first described by Park et al \cite{Park2011}, and we will give a short derivation here.
-
-The crux is that Bloch functions with periodic part $u_n(\bm{k},\bm{r})$ that have non-zero orbital angular momentum (OAM) create inter unit cell dipoles, which couple to the uniform electric field caused by the polarization. This will thus lead to the creation of orbitals with OAM away from high symmetry points, if symmetries allow for it and ferroelectricity is present. This effect is purely electrostatic and thus doesn't come with small prefectors like the first term in \ref{qe:kp_expansion}.
-
+Contrary to the relativistic effect, this one originates from electrostatic considerations, and thus is not plagued by the small prefactors found in the relativistic contributions of Eq.~\ref{eq:kp_expansion}. Namely, it can be shown that Bloch functions with nonzero orbital angular momentum have nonzero dipoles that exist between unit cells, wich will couple to the electric polarization. This leads to two seperate effects, firstly, when spin orbit coupling is included, OAM is unquenched at the high symmetry k-points, and as will be shown below, this leads to a correction to the band dispersion that varies linearly with $\bm{k}$. Secondly, it causes a linear variation of the OAM of the Bloch functions as one moves away from the high-symmetry point, even without considering the unquenching from the atomic SOC. If one then includes $\bm{l}\cdot\bm{\sigma}$ this linear $l$ will lead to a linear energy contribution with either positive or negative slope, depending on the spin's orientation with respect to it.
+To understand what leads to this contribution, we first need to understand the behavior of the orbital angular momentum of the Bloch functions as we go through reciprocal space. This has been first described by Park et al \cite{Park2011}, and we will give a short derivation here, based on a tight-binding model.
 \subsection{Tight-Binding model}
-Due to the breaking of inversion symmetry there are extra allowed hopping terms between unit cells, on top of the usual ones from overlap integrals. These terms originate from the energy $H_{isb} = e (\bm{d}\cdot \bm{E})$, i.e. electric dipole moments coupling to the electric field. In the following we study a toy 2D square layer with one atom per unit cell and $s$, $p$ orbitals, where the field is chosen perpendicular to the 2D layer along the $z$ direction. Assuming Wannier functions $p_\alpha(\bm{r},\bm{R}) = \alpha e^{\left(\frac{-|\bm{r}-\bm{R}|}{a_0}\right)^2}$, we can write down the dipole matrix terms between the central unit cell and one shifted by $\bm{R}=\bm{n}a, \bm{n}=(n_x,n_y)$, using the basis $s, p_x, p_y, p_z$ as follows:
+Due to the breaking of inversion symmetry there are extra allowed hopping terms between unit cells, on top of the usual ones from overlap integrals. These terms originate from the energy $H_{isb} = e (\bm{d}\cdot \bm{E})$, i.e. electric dipole moments coupling to the electric field. In the following we study a toy 2D square layer with one atom per unit cell and $s$, $p$ orbitals, where the field is chosen perpendicular to the 2D layer along the $z$ direction. Assuming Wannier functions $s(\bm{r},\bm{R}) = e^{\left(\frac{-|\bm{r}-\bm{R}|}{a_0}\right)^2}$, $p_\alpha(\bm{r},\bm{R}) = \alpha e^{\left(\frac{-|\bm{r}-\bm{R}|}{a_0}\right)^2}$, we can write down the dipole matrix terms between the central unit cell and ones shifted by $\bm{R}=\bm{n}a, \bm{n}=(n_x,n_y)$, using the basis $s, p_x, p_y, p_z$ as follows:
 \begin{align}
 	\label{eq:dipole}
 	\hat{d}_z(\bm{n}) =& ae^{-\frac{1}{2}\left(\frac{a|\bm{n}|}{a_0}\right)^2}\frac{\pi^{\frac{3}{2}}}{16\sqrt{2}}\left(\begin{matrix}0&0&0&2\\\\0&0&0&n_x\\\\0&0&0&n_y\\\\2&n_x&n_y&0\end{matrix}\right)\\
 	=&d_z^0(\bm{n})\hat{d}^1_z(\bm{n}).
 	% d_z(\bm{R}) = ae^{-\frac{|\bm{R}|^2}{2}}\frac{\pi^{\frac{3}{2}}}{16\sqrt{2}}(2,n_x,n_y,0),
 \end{align}
-Using these Wannier functions we can write down the dipoles of Bloch functions as,
+Using the aforementioned Wannier functions to construct Bloch functions, we can write down their dipoles as:
 \begin{align}
 	\hat{d}_z(\bm{k}) &= \sum_{\bm{n}} e^{i \bm{k}\cdot \bm{n}}\hat{d}_z(\bm{n})\\
-	&=\sum_{\bm{n}}i \sin(\bm{k}\cdot\bm{n}) \hat{d}_z(\bm{n})
+	&=\sum_{\bm{n}}i \sin(\bm{k}\cdot\bm{n}) \hat{d}_z(\bm{n}),
 \end{align}
-writing $\bm{k}$ in terms of crystalline coordinates, and we kept only the $\sin(\bm{k}\cdot\bm{n})$ part of the exponent since the $\cos(\bm{k}\cdot\bm{n})$ part is $0$ due to the fact that it is even in the sum over $\bm{n} = \{-\infty, \infty\}$, whereas $\hat{d}_z(\bm{n})$ is odd \lp{this is not fully true, the cos term actually does contribute for the $d_z^s$ term, but that leads to a higher order term, should I discuss this?}. If we then assume that at $k=0$ the Bloch functions are formed purely from these $p_x,p_y,p_z$ Wannier functions: $\Ket{\alpha(\bm{k}=\bm{0})} = \sum_{\bm{n}} \Ket{\alpha(\bm{n})}$, we can write down a perturbation theory for small $\bm{k}$ in the spirit of the usual $\bm{k}\cdot\bm{p}$ theory,
+writing $\bm{k}$ in terms of crystalline coordinates ($\frac{2\pi}{a}$), and keeping only the $\sin(\bm{k}\cdot\bm{n})$ part of the exponent since the $\cos(\bm{k}\cdot\bm{n})$ part is zero due to the fact that it is even in the sum over $\bm{n} = \{-\infty, \infty\}$, whereas $\hat{d}_z(\bm{n})$ is odd \lp{this is not fully true, the cos term actually does contribute for the $d_z^s$ term, but that leads to a higher order term, should I discuss this? I could just keep sin from the point of view of linear-in-k terms}. Solving the tight binding model for $k=0$, there will be a hybridization between the $s$ and $p_z$ orbital due to $H_{isb}$, however, since this hybridization has no terms that vary linearly with $k$, we write in the following $p_z$ as the hybrid $s$-$p_z$ orbital. If we then assume that at $k=0$ the Bloch functions are formed from this orbital and the $p_x$,$p_y$ orbitals: $\Ket{\alpha(\bm{k}=\bm{0})} = \sum_{\bm{n}} \Ket{\alpha(\bm{n})}$, we can write down a perturbation theory for small $\bm{k}$ in the spirit of the usual $\bm{k}\cdot\bm{p}$ theory,
 
 \begin{align}
 	\Ket{\alpha(\bm{k})}&=\Ket{\alpha} + \sum_{\beta \neq \alpha} \frac{\Bra{\beta} H_0(\bm{k}) + H_{isb}(\bm{k}) \Ket{\alpha}}{E_{\alpha} - E_{\beta}} \Ket{\beta}\\
@@ -100,8 +97,8 @@ With $l_y = -i\hbar(z \partial_x - x \partial_z )$ we get that
 	\Bra{\alpha(\bm{k})} l_y \Ket{\alpha(\bm{k})} = c(k_x) = k_x \frac{e E_z \sum_{\bm{n}} n_x^2d_z^0(\bm{n})}{E_{p_x} - E_{p_z}}
 \end{equation}
 \lp{normalization!!}
-A similar term exists for $l_x$, but with the opposite sign. If the atomic spin-orbit coupling, $\lambda \bm{l}\cdot\bm{\sigma}$, is then taken into account, we get to a contribution to the energy dispersion $\varepsilon(\bm{k}) \propto E_z (k_x \sigma_y - k_y \sigma_x)$ which has exactly the form of a Rashba splitting. 
-This shows that the inversion symmetry breaking term will lead to a linear variation of the orbital angular momentum. When the orbitals originate from an atom with non-negligible atomic spin-orbit coupling , this linear variation of the OAM will lead to a contribution to the dispersion that varies linearly with $\bm{k}$, either upwards or downwards depending on the sign of $\sigma$. Except for the atomic spin-orbit coupling, which can be large, this effect is purely based around electrostatic considerations and thus does not suffer from the same minuscule prefactor as the purely relativistic Rashba effect.
+A similar term exists for $l_x$, coming from the variation of $k_y$, but with the opposite sign. If the atomic spin-orbit coupling, $\lambda \bm{l}\cdot\bm{\sigma}$, is then taken into account, we get to a contribution to the energy dispersion $\varepsilon(\bm{k}) \propto E_z (k_x \sigma_y - k_y \sigma_x)$ which has exactly the form of a Rashba splitting. 
+This shows that the inversion symmetry breaking term will lead to a linear variation of the OAM. When the orbitals originate from an atom with non-negligible atomic spin-orbit coupling, this linear variation of the OAM will lead to a contribution to the dispersion that varies linearly with $\bm{k}$, either upwards or downwards depending on the sign of $\sigma$. Except for the atomic spin-orbit coupling, which can be large, this effect is purely based around electrostatic considerations and thus does not have the same minuscule prefactor as the purely relativistic Rashba effect.
 
 This assumes that the states at the high symmetry point ($|k|=0$) have a fully quenched OAM, however, when spin-orbit coupling is included, this is only partially true. Due to the energy contribution from $H_{soc}$ the material can gain by creating orbitals that have $\bm{j} = \bm{l} + \bm{\sigma}$. Similar to the above derivation, we can look at a small-$k$ expansion for orbitals that have nonzero OAM.
 
@@ -109,12 +106,12 @@ We can write in general that
 \begin{equation}
 	\Bra{\alpha} \hat{l}_{\gamma} \Ket{\beta} = i \epsilon_{\alpha \beta \gamma} c^*_\alpha c_\beta
 \end{equation}
-when $\alpha,\beta,\gamma$ designate $p_{x,y,z}$. This means that there has to be at least some admixing of multiple $p$-orbitals to get nonzero OAM. This leads to the following expansion of the Bloch functions around the high-symmetry $|k|=0$ point:
+when $\alpha,\beta,\gamma$ designate $x,y,z$. This means that there has to be at least some admixing of multiple $p$-orbitals to get nonzero OAM. This leads to the following expansion of the Bloch functions around the high-symmetry $|k|=0$ point:
 \begin{align}
 	\Ket{\psi_n(\bm{k})} =& \sum_{\bm{n},\alpha} c_\alpha(\bm{k}) e^{i \bm{k}\cdot\bm{n}}\Ket{\alpha(\bm{n})}\\
 	=& \sum_{\bm{n},\alpha} \left(c_\alpha(0) + \bm{k}\left.\frac{\partial c_\alpha(\bm{k})}{\partial_k}\right\rvert_{\bm{k}=0} \right)\left(1 + i\bm{k}\cdot\bm{n}\right)\Ket{\alpha(\bm{n})} .
 \end{align}
-If we then calculate the linear-with-k varying dipole moment of these Bloch functions, we can recognize the contribution coming from the second term in the $c$ expansion together with the first term in the $e$ expansion as the previously discussed contribution. We can, however, also combine the first term in the $c$ expansion with the second in the $e$ expansion. If we single out this contribution to $d_z(\bm{k})$ we get
+If we then calculate the terms that vary linearly with $k$, we can recognize the contribution coming from the second term in the $c$ expansion together with the first term in the $e$ expansion as the previously discussed contribution. We can, however, also combine the first term in the $c$ expansion with the second in the $e$ expansion. If we single out this contribution to $d_z(\bm{k})$ we get
 \begin{align}
 	\label{eq:d_z_from_OAM}
 	d_z(\bm{k}) =&  i\sum_{\bm{n},\alpha,\beta} c_\alpha^*(0)c_\beta(0)\bm{k}\cdot\bm{n}\Bra{\alpha(\bm{0})} \hat{d}_z \Ket{\beta(\bm{n})}\\
